// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test customer schema 1`] = `
{
  "isValid": true,
  "properties": {
    "address": {
      "isValid": true,
      "properties": {
        "line1": {
          "isValid": true,
        },
      },
    },
    "name": {
      "isValid": true,
    },
  },
}
`;

exports[`Test index type - regex - 2 1`] = `
{
  "errorMessage": "Required field.",
  "errorPath": [
    "cars",
    "/ru.*/",
  ],
  "isValid": false,
  "properties": {
    "address": {
      "isValid": true,
      "properties": {
        "line1": {
          "isValid": true,
        },
      },
    },
    "cars": {
      "errorMessage": "Required field.",
      "errorPath": [
        "cars",
        "/ru.*/",
      ],
      "isValid": false,
      "properties": {
        "/ru.*/": {
          "errorMessage": "Required field.",
          "errorPath": [
            "cars",
            "/ru.*/",
          ],
          "isValid": false,
          "properties": {},
        },
      },
    },
    "name": {
      "isValid": true,
    },
  },
}
`;

exports[`Test index type - regex - index type is undefined 1`] = `
{
  "errorMessage": "Required field.",
  "errorPath": [
    "cars",
  ],
  "isValid": false,
  "properties": {
    "cars": {
      "errorMessage": "Required field.",
      "errorPath": [
        "cars",
      ],
      "isValid": false,
      "properties": {},
    },
    "name": {
      "isValid": true,
    },
  },
}
`;

exports[`Test index type - regex 1`] = `
{
  "errorMessage": "Required field.",
  "errorPath": [
    "cars",
    "/.*/",
  ],
  "isValid": false,
  "properties": {
    "address": {
      "isValid": true,
      "properties": {
        "line1": {
          "isValid": true,
        },
      },
    },
    "cars": {
      "errorMessage": "Required field.",
      "errorPath": [
        "cars",
        "/.*/",
      ],
      "isValid": false,
      "properties": {
        "/.*/": {
          "errorMessage": "Required field.",
          "errorPath": [
            "cars",
            "/.*/",
          ],
          "isValid": false,
          "properties": {},
        },
      },
    },
    "name": {
      "isValid": true,
    },
  },
}
`;

exports[`Test index type - required field - missing 1`] = `
{
  "errorMessage": "Required field.",
  "errorPath": [
    "cars",
    "ruby",
  ],
  "isValid": false,
  "properties": {
    "address": {
      "isValid": true,
      "properties": {
        "line1": {
          "isValid": true,
        },
      },
    },
    "cars": {
      "errorMessage": "Required field.",
      "errorPath": [
        "cars",
        "ruby",
      ],
      "isValid": false,
      "properties": {
        "ruby": {
          "errorMessage": "Required field.",
          "errorPath": [
            "cars",
            "ruby",
          ],
          "isValid": false,
          "properties": {},
        },
      },
    },
    "name": {
      "isValid": true,
    },
  },
}
`;

exports[`Test index type 1`] = `
{
  "isValid": true,
  "properties": {
    "address": {
      "isValid": true,
      "properties": {
        "line1": {
          "isValid": true,
        },
      },
    },
    "cars": {
      "isValid": true,
      "properties": {
        "rugby": {
          "isValid": true,
          "properties": {
            "vin": {
              "isValid": true,
            },
          },
        },
      },
    },
    "name": {
      "isValid": true,
    },
  },
}
`;
